--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="baanner-section">
+            <div class="header-section">
+                <h2 class="happy-new-year">Happy New Year</h2>
+                <h1 style=" font-size: 50px;
+                " class="celebration">
+                    New Year Party Celebration
+                </h1>
+            </div>
+        </section>
+
+        <section class="offer">
+            <div class="offer-value">
+                <h1 style="color: #F00; font-weight: 700; font-size: 48px;">65% OFF</h1>
+                <p  style="color: #F00;"> OUR HOLIDAY DEALS ARE BETTER</p>
+                <h2>ALL CATEGORIES</h2>
+                <img style="width: 400px;" src="New Year Photo.png" alt="">
+            </div>
+        </section>
+
+        <section class="banner-two">
+            <div class="banner-value">
+                <h1 style="color: white;">Welcome to midnight party</h1>
+                <span style="color: white; ">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </span>
+                <br>
+                <button style="margin-top: 20px;" class="btn-primary">Join Now</button>
+            </div>
+            
+        </section>
+    </header>
 </body>
 </html>
